components/frontend/base/frontend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fia
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
